--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,9 @@
 name: Deploy to Wow Server
 
 on:
-  workflow_dispatch:  # Only runs when manually triggered
+  push:
+    branches:
+      - main  # Change this if using a different branch
 
 jobs:
   deploy:
@@ -23,22 +25,23 @@ jobs:
 
       - name: Deploy on Server
         run: |
-          ssh ubuntu@$SERVER_IP << 'EOF'
+          ssh user@$SERVER_IP << 'EOF'
             cd /var/www/html/wow
-            git stash
-            git pull origin main
 
-            cd backend-main
-            npm install --legacy-peer-deps
+            # Define all panels and backend
+            services=("backend-main" "Driver_Panel" "User_Panel" "admin-panel" "corporate-panel-main" "dispatcher-panel-main" "hotel-panel-main" "hub_panel_main" "partner-panel-main")
 
-            for panel in Driver_Panel User_Panel admin-panel corporate-panel-main dispatcher-panel-main hotel-panel-main hub_panel_main partner-panel-main; do
-              cd ../$panel
-              git stash
-              git pull origin main
-              npm install --legacy-peer-deps
-              npm run build-prod
+            for dir in "${services[@]}"; do
+              echo "Processing $dir"
+              cd $dir
+              git reset --hard origin/main  # Force reset any local changes
+              git pull origin main  # Pull latest changes
+              npm install --legacy-peer-deps  # Install dependencies
+              npm run build-prod  # Build frontend (if applicable)
+              cd ..
             done
 
+            # Restart all processes with PM2
             pm2 restart all
           EOF
         env:
