--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Deploy on Server
         run: |
-          ssh user@$SERVER_IP << 'EOF'
+          ssh ubuntu@$SERVER_IP << 'EOF'
             cd /var/www/html/wow
 
             # Define all panels and backend
